# serializer version: 1
# name: test_compile_fix_disallowed_import
  dict({
    'fixed_code': '''
      from dataclasses import dataclass, field
      
      INSTRUCTION_KNOWLEDGE_ITEM = "Extract any relevant facts from the user input that could help future tasks."
      INSTRUCTION_QUERY = "Formulate a concise query capturing what needs to be retrieved from the knowledge base."
      INSTRUCTION_RESPONSE = "Respond with a brief, directly relevant summary of the retrieved knowledge."
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class KnowledgeItem:
          raw: str = field(metadata={"description": "Raw textual information representing the knowledge to store."})
      
      
      @dataclass
      class Query:
          raw: str = field(metadata={"description": "Text describing what information should be retrieved from the knowledge base."})
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, item: KnowledgeItem) -> None:
              self.store.append(item.raw)
              self.toolkit.logger.log(f"Stored: {item.raw[:80]}")
      
          def read(self, query: Query) -> str:
              return "\n".join(self.store) if self.store else "No information stored."
  
    ''',
    'original_error_details': 'Disallowed import: numpy',
    'original_error_type': 'Import whitelist violation',
  })
# ---
# name: test_compile_fix_runtime_bug
  dict({
    'fixed_code': '''
      from dataclasses import dataclass
      
      INSTRUCTION_KNOWLEDGE_ITEM = "Summarize the key actionable facts and assertions that should be stored in the knowledge base."
      INSTRUCTION_QUERY = "Formulate concise criteria for retrieving matching knowledge base entries relevant to the task."
      INSTRUCTION_RESPONSE = "Respond with a brief, accurate answer referencing retrieved knowledge."
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class KnowledgeItem:
          raw: str
      
      
      @dataclass
      class Query:
          raw: str
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, item: KnowledgeItem) -> None:
              self.store.append(item.raw)
      
          def read(self, query: Query) -> str:
              return "\n".join(self.store) if self.store else "No information stored."
  
    ''',
    'original_smoke_error': "Runtime: name 'process_text' is not defined",
  })
# ---
# name: test_end_to_end_offline
  dict({
    'first_output': 'Paris',
    'num_failed': 0,
    'num_outputs': 1,
    'score': 1.0,
  })
# ---
# name: test_end_to_end_online
  dict({
    'logs': list([
      'Val score: 1.000 (1 cases)',
    ]),
    'num_failed': 0,
    'num_outputs': 1,
    'score': 1.0,
    'val_output': 'Alice would pick the green apple.',
  })
# ---
# name: test_knowledge_item_generation
  dict({
    'output': '{"raw":"The capital of France is Paris."}',
    'prompt': '''
      Given the following text, create a KnowledgeItem to store this information in memory.
      
      Text: The capital of France is Paris.
      
      The KnowledgeItem must conform to this schema:
      // KnowledgeItem: Raw text knowledge item to store in the knowledge base.
      {
        "raw": "..."  // str, The raw text to store
      }
      
      Output ONLY a valid JSON object matching the schema fields. No explanation.
    ''',
  })
# ---
# name: test_knowledge_item_with_feedback
  dict({
    'output': '{"raw":"The capital of France is Paris."}',
    'prompt': '''
      Evaluation result: Score: 0.0 (incorrect)
      Ground truth: Paris
      
      Based on this feedback, generate a knowledge item to write into memory.
      
      The knowledge item must be a JSON object matching this schema:
      // KnowledgeItem: Raw text knowledge item to store in the knowledge base.
      {
        "raw": "..."  // str, The raw text to store
      }
      
      Respond with the JSON only.
    ''',
  })
# ---
# name: test_patch_generation_compile_fix
  dict({
    'fixed_code': '''
      from dataclasses import dataclass
      
      INSTRUCTION_KNOWLEDGE_ITEM = "Extract the most relevant factual details to populate the knowledge base in JSON format."
      INSTRUCTION_QUERY = "Generate concise query parameters that specify how to locate relevant knowledge items from the knowledge base."
      INSTRUCTION_RESPONSE = "Respond with a brief, informative summary that cites stored knowledge relevant to the query."
      ALWAYS_ON_KNOWLEDGE = "Always consider knowledge items as authoritative references when answering queries."
      
      
      @dataclass
      class KnowledgeItem:
          raw: str
      
      
      @dataclass
      class Query:
          raw: str
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, item: KnowledgeItem) -> None:
              self.store.append(item.raw)
      
          def read(self, query: Query) -> str:
              return "\n".join(self.store[:5]) if self.store else "No information stored."
  
    ''',
    'output': '''
      *** Begin Patch
      *** Update File: program.py
      @@
      -INSTRUCTION_KNOWLEDGE_ITEM = ""
      -INSTRUCTION_QUERY = ""
      -INSTRUCTION_RESPONSE = ""
      -ALWAYS_ON_KNOWLEDGE = ""
      +INSTRUCTION_KNOWLEDGE_ITEM = "Extract the most relevant factual details to populate the knowledge base in JSON format."
      +INSTRUCTION_QUERY = "Generate concise query parameters that specify how to locate relevant knowledge items from the knowledge base."
      +INSTRUCTION_RESPONSE = "Respond with a brief, informative summary that cites stored knowledge relevant to the query."
      +ALWAYS_ON_KNOWLEDGE = "Always consider knowledge items as authoritative references when answering queries."
      @@
           def read(self, query: Query) -> str:
      -        # Bug: missing closing parenthesis
      -        return "\n".join(self.store[:5] if self.store else "No information stored."
      +        return "\n".join(self.store[:5]) if self.store else "No information stored."
      *** End Patch
    ''',
    'prompt': '''
      You are an expert Python programmer. A Knowledge Base Program failed to compile or run.
      Fix the error and output your fix as a patch.
      
      You are designing a Knowledge Base Program that implements three classes:
      
      1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
         - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
         - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
      
      2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - Same JSON-compatible type restriction and field description support as KnowledgeItem
      
      3. **KnowledgeBase** (class): The core knowledge base system.
         - `__init__(self, toolkit)`: Receives a Toolkit with:
           - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
           - `toolkit.chroma`: chromadb ephemeral client
           - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
           - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
         - `write(self, item: KnowledgeItem) -> None`: Store information
         - `read(self, query: Query) -> str`: Retrieve relevant information as a string
      
      Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
      
      ## Runtime Constraints
      
      These limits are enforced during evaluation. Violating them results in score = 0.
      
      - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
      - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
      - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
      
      ## Instruction Constants (required)
      
      Four module-level string constants provide the natural-language instructions used in task agent prompts:
      
      - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
      - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
      
      INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
      
      
      Rules:
      1. Output ONLY the fix as a patch. No explanation needed.
      2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
      3. Only use allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb.
      4. Make minimal changes — fix ONLY the broken line(s). Do NOT add new fields, imports, or restructure the code.
      
      Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
      
      Format:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ <optional context hint>
       context line (1-2 lines before change)
      -removed line
      +added line
       context line (1-2 lines after change)
      *** End Patch
      ```
      
      Rules:
      - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
      - Include 1-2 context lines before and after each change for anchoring.
      - Multiple hunks are allowed within one `*** Update File` block.
      
      Example — replacing a return value:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ return statement
       def read(self, query: Query) -> str:
      -    return "\n".join(self.store)
      +    return "\n".join(self.store[-5:])
      *** End Patch
      ```
      
      ## Broken Code
      
      ```python
      from dataclasses import dataclass
      
      INSTRUCTION_KNOWLEDGE_ITEM = ""
      INSTRUCTION_QUERY = ""
      INSTRUCTION_RESPONSE = ""
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class KnowledgeItem:
          raw: str
      
      
      @dataclass
      class Query:
          raw: str
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, item: KnowledgeItem) -> None:
              self.store.append(item.raw)
      
          def read(self, query: Query) -> str:
              # Bug: missing closing parenthesis
              return "\n".join(self.store[:5] if self.store else "No information stored."
      
      ```
      
      ## Error
      
      **Syntax error**: '(' was never closed (<unknown>, line 29)
      
      Fix the error and output your fix as a patch.
    ''',
  })
# ---
# name: test_patch_generation_reflection
  dict({
    'output': '''
      Diagnosis:
      The current implementation stores and retrieves knowledge as undifferentiated raw text, so queries like “What is Alice’s favorite color?” cannot find structured facts; the read method simply joins everything and can’t target specific entries. Additionally, there are no instructions guiding the LLM to produce structured items or focused queries, making downstream retrieval ineffective. To fix this, we need to structure KnowledgeItem/Query with semantic fields, persist facts in SQLite for precise filtering, and update the instructions so task agents produce usable JSON.
      
      Changes:
      - Defined KnowledgeItem and Query with structured, JSON-compatible fields (subject/attribute/value/context) plus descriptions so generated JSON is consistent.
      - Added precise instructions and always-on knowledge text explaining how to populate items, queries, and responses.
      - Rebuilt KnowledgeBase to persist facts in SQLite, log actions, filter reads based on query fields, and format concise summaries limited to 1000 characters with contextual detail.
      
      Patch:
      *** Begin Patch
      *** Update File: program.py
      @@
      -from dataclasses import dataclass, field
      +from dataclasses import dataclass, field
      +from typing import Optional
       
      -INSTRUCTION_KNOWLEDGE_ITEM = "Given the following text, create a KnowledgeItem to store this information in the knowledge base. Include all key information."
      -INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      -INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      -ALWAYS_ON_KNOWLEDGE = ""
      +INSTRUCTION_KNOWLEDGE_ITEM = (
      +    "Parse the provided source material and emit JSON with fields "
      +    "`subject`, `attribute`, `value`, and optional `context`. "
      +    "Subject names the entity, attribute names the property, "
      +    "value gives the fact, and context includes supporting details."
      +)
      +INSTRUCTION_QUERY = (
      +    "Review the user question and emit JSON with optional `subject`, "
      +    "`attribute`, and `context` fields reflecting what should be retrieved "
      +    "from the knowledge base. Empty strings mean the field is not relevant."
      +)
      +INSTRUCTION_RESPONSE = (
      +    "Use retrieved knowledge to give a concise, factual answer in sentences "
      +    "no longer than 100 words. If no knowledge matches, reply with "
      +    "\"I don't have that information yet.\""
      +)
      +ALWAYS_ON_KNOWLEDGE = (
      +    "Knowledge base entries describe factual claims about people, projects, "
      +    "or processes. Favor direct matches when answering."
      + )
       
       
       @dataclass
       class KnowledgeItem:
      -    """Raw text knowledge item to store in the knowledge base."""
      -    raw: str = field(metadata={"description": "The raw text to store"})
      +    """Structured fact to capture in the knowledge base for consistent retrieval."""
      +    subject: str = field(metadata={"description": "Entity or topic this fact is about"})
      +    attribute: str = field(metadata={"description": "Property or relationship being described"})
      +    value: str = field(metadata={"description": "The factual detail being asserted"})
      +    context: Optional[str] = field(
      +        default=None,
      +        metadata={"description": "Optional supporting information or source context"},
      +    )
       
       
       @dataclass
       class Query:
      -    """Raw text query to retrieve from the knowledge base."""
      -    raw: str = field(metadata={"description": "The query text to search for"})
      +    """Guides which knowledge items should be retrieved for answering a question."""
      +    subject: Optional[str] = field(
      +        default=None, metadata={"description": "Focus entity/topic if present"}
      +    )
      +    attribute: Optional[str] = field(
      +        default=None, metadata={"description": "Property or relationship to filter on"}
      +    )
      +    context: Optional[str] = field(
      +        default=None, metadata={"description": "Contextual hint to narrow results"}
      +    )
       
       
       class KnowledgeBase:
      -    """Simple append-all / return-all knowledge base."""
      -
      -    def __init__(self, toolkit):
      -        self.toolkit = toolkit
      -        self.store: list[str] = []
      +    """Stores structured facts in SQLite and answers queries via selective filtering."""
      +
      +    def __init__(self, toolkit):
      +        self.toolkit = toolkit
      +        # Initialize the facts table; this keeps sciences reproducible and efficient.
      +        create_table_sql = """
      +        CREATE TABLE IF NOT EXISTS facts (
      +            subject TEXT NOT NULL,
      +            attribute TEXT NOT NULL,
      +            value TEXT NOT NULL,
      +            context TEXT
      +        )
      +        """
      +        toolkit.db.execute(create_table_sql)
      +        toolkit.db.commit()
       
           def write(self, item: KnowledgeItem) -> None:
      -        self.store.append(item.raw)
      -        self.toolkit.logger.debug(f"Stored: {item.raw}")
      +        # Persist the structured fact so queries can filter by field values.
      +        insert_sql = "INSERT INTO facts (subject, attribute, value, context) VALUES (?, ?, ?, ?)"
      +        self.toolkit.db.execute(
      +            insert_sql,
      +            (
      +                item.subject.strip(),
      +                item.attribute.strip(),
      +                item.value.strip(),
      +                item.context.strip() if item.context else None,
      +            ),
      +        )
      +        self.toolkit.db.commit()
      +        self.toolkit.logger.debug(f"Stored fact: {item.subject} | {item.attribute} -> {item.value}")
       
           def read(self, query: Query) -> str:
      -        self.toolkit.logger.debug(f"Query: {query.raw}, store size: {len(self.store)}")
      -        if not self.store:
      -            return "No information stored."
      -        result = "\n".join(self.store)
      -        return result[:1000]
      +        self.toolkit.logger.debug(
      +            "Read query",
      +            extra={
      +                "subject": query.subject,
      +                "attribute": query.attribute,
      +                "context": query.context,
      +            },
      +        )
      +        filters = []
      +        params = []
      +        # Build a case-insensitive WHERE clause by adding lower() comparisons.
      +        if query.subject:
      +            filters.append("LOWER(subject) = LOWER(?)")
      +            params.append(query.subject)
      +        if query.attribute:
      +            filters.append("LOWER(attribute) = LOWER(?)")
      +            params.append(query.attribute)
      +        if query.context:
      +            filters.append("context LIKE ?")
      +            params.append(f"%{query.context}%")
      +
      +        where_clause = f"WHERE {' AND '.join(filters)}" if filters else ""
      +        select_sql = f"SELECT subject, attribute, value, context FROM facts {where_clause} ORDER BY rowid DESC LIMIT 5"
      +        cursor = self.toolkit.db.execute(select_sql, params)
      +        rows = cursor.fetchall()
      +
      +        if not rows:
      +            self.toolkit.logger.debug("No matching facts found.")
      +            return "I don't have that information yet."
      +
      +        summary_lines = []
      +        for subject, attribute, value, context in rows:
      +            line = f"{subject} · {attribute}: {value}"
      +            if context:
      +                line += f" (context: {context})"
      +            summary_lines.append(line)
      +
      +        response = "\n".join(summary_lines)
      +        # Always enforce the 1000-character hard cap on read responses.
      +        self.toolkit.logger.debug(f"Responding with {len(response)} characters")
      +        return response[:1000]
      *** End Patch
    ''',
    'patched_code': '''
      from dataclasses import dataclass, field
      from typing import Optional
      
      INSTRUCTION_KNOWLEDGE_ITEM = (
          "Parse the provided source material and emit JSON with fields "
          "`subject`, `attribute`, `value`, and optional `context`. "
          "Subject names the entity, attribute names the property, "
          "value gives the fact, and context includes supporting details."
      )
      INSTRUCTION_QUERY = (
          "Review the user question and emit JSON with optional `subject`, "
          "`attribute`, and `context` fields reflecting what should be retrieved "
          "from the knowledge base. Empty strings mean the field is not relevant."
      )
      INSTRUCTION_RESPONSE = (
          "Use retrieved knowledge to give a concise, factual answer in sentences "
          "no longer than 100 words. If no knowledge matches, reply with "
          "\"I don't have that information yet.\""
      )
      ALWAYS_ON_KNOWLEDGE = (
          "Knowledge base entries describe factual claims about people, projects, "
          "or processes. Favor direct matches when answering."
       )
      
      
      @dataclass
      class KnowledgeItem:
          """Structured fact to capture in the knowledge base for consistent retrieval."""
          subject: str = field(metadata={"description": "Entity or topic this fact is about"})
          attribute: str = field(metadata={"description": "Property or relationship being described"})
          value: str = field(metadata={"description": "The factual detail being asserted"})
          context: Optional[str] = field(
              default=None,
              metadata={"description": "Optional supporting information or source context"},
          )
      
      
      @dataclass
      class Query:
          """Guides which knowledge items should be retrieved for answering a question."""
          subject: Optional[str] = field(
              default=None, metadata={"description": "Focus entity/topic if present"}
          )
          attribute: Optional[str] = field(
              default=None, metadata={"description": "Property or relationship to filter on"}
          )
          context: Optional[str] = field(
              default=None, metadata={"description": "Contextual hint to narrow results"}
          )
      
      
      class KnowledgeBase:
          """Stores structured facts in SQLite and answers queries via selective filtering."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              # Initialize the facts table; this keeps sciences reproducible and efficient.
              create_table_sql = """
              CREATE TABLE IF NOT EXISTS facts (
                  subject TEXT NOT NULL,
                  attribute TEXT NOT NULL,
                  value TEXT NOT NULL,
                  context TEXT
              )
              """
              toolkit.db.execute(create_table_sql)
              toolkit.db.commit()
      
          def write(self, item: KnowledgeItem) -> None:
              # Persist the structured fact so queries can filter by field values.
              insert_sql = "INSERT INTO facts (subject, attribute, value, context) VALUES (?, ?, ?, ?)"
              self.toolkit.db.execute(
                  insert_sql,
                  (
                      item.subject.strip(),
                      item.attribute.strip(),
                      item.value.strip(),
                      item.context.strip() if item.context else None,
                  ),
              )
              self.toolkit.db.commit()
              self.toolkit.logger.debug(f"Stored fact: {item.subject} | {item.attribute} -> {item.value}")
      
          def read(self, query: Query) -> str:
              self.toolkit.logger.debug(
                  "Read query",
                  extra={
                      "subject": query.subject,
                      "attribute": query.attribute,
                      "context": query.context,
                  },
              )
              filters = []
              params = []
              # Build a case-insensitive WHERE clause by adding lower() comparisons.
              if query.subject:
                  filters.append("LOWER(subject) = LOWER(?)")
                  params.append(query.subject)
              if query.attribute:
                  filters.append("LOWER(attribute) = LOWER(?)")
                  params.append(query.attribute)
              if query.context:
                  filters.append("context LIKE ?")
                  params.append(f"%{query.context}%")
      
              where_clause = f"WHERE {' AND '.join(filters)}" if filters else ""
              select_sql = f"SELECT subject, attribute, value, context FROM facts {where_clause} ORDER BY rowid DESC LIMIT 5"
              cursor = self.toolkit.db.execute(select_sql, params)
              rows = cursor.fetchall()
      
              if not rows:
                  self.toolkit.logger.debug("No matching facts found.")
                  return "I don't have that information yet."
      
              summary_lines = []
              for subject, attribute, value, context in rows:
                  line = f"{subject} · {attribute}: {value}"
                  if context:
                      line += f" (context: {context})"
                  summary_lines.append(line)
      
              response = "\n".join(summary_lines)
              # Always enforce the 1000-character hard cap on read responses.
              self.toolkit.logger.debug(f"Responding with {len(response)} characters")
              return response[:1000]
  
    ''',
    'prompt': '''
      You are an expert Python programmer specializing in knowledge base system design.
      
      Your task: Given a Knowledge Base Program (Python code defining KnowledgeItem, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
      
      <interface_spec>
      You are designing a Knowledge Base Program that implements three classes:
      
      1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
         - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
         - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
      
      2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - Same JSON-compatible type restriction and field description support as KnowledgeItem
      
      3. **KnowledgeBase** (class): The core knowledge base system.
         - `__init__(self, toolkit)`: Receives a Toolkit with:
           - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
           - `toolkit.chroma`: chromadb ephemeral client
           - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
           - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
         - `write(self, item: KnowledgeItem) -> None`: Store information
         - `read(self, query: Query) -> str`: Retrieve relevant information as a string
      
      Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
      
      ## Runtime Constraints
      
      These limits are enforced during evaluation. Violating them results in score = 0.
      
      - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
      - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
      - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
      
      ## Instruction Constants (required)
      
      Four module-level string constants provide the natural-language instructions used in task agent prompts:
      
      - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
      - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
      
      INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
      
      </interface_spec>
      
      <rules>
      1. Output your diagnosis first, then your changes as a patch using the format below.
      2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
      3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
      4. `read()` must return at most 1000 characters — do not return all stored text.
      5. Keep it simple. Make minimal, targeted fixes.
      6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
      7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
      </rules>
      
      <patch_format>
      Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
      
      Format:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ <optional context hint>
       context line (1-2 lines before change)
      -removed line
      +added line
       context line (1-2 lines after change)
      *** End Patch
      ```
      
      Rules:
      - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
      - Include 1-2 context lines before and after each change for anchoring.
      - Multiple hunks are allowed within one `*** Update File` block.
      
      Example — replacing a return value:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ return statement
       def read(self, query: Query) -> str:
      -    return "\n".join(self.store)
      +    return "\n".join(self.store[-5:])
      *** End Patch
      ```
      </patch_format>
      
      <current_program iteration="1">
      ```python
      from dataclasses import dataclass, field
      
      INSTRUCTION_KNOWLEDGE_ITEM = "Given the following text, create a KnowledgeItem to store this information in the knowledge base. Include all key information."
      INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class KnowledgeItem:
          """Raw text knowledge item to store in the knowledge base."""
          raw: str = field(metadata={"description": "The raw text to store"})
      
      
      @dataclass
      class Query:
          """Raw text query to retrieve from the knowledge base."""
          raw: str = field(metadata={"description": "The query text to search for"})
      
      
      class KnowledgeBase:
          """Simple append-all / return-all knowledge base."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store: list[str] = []
      
          def write(self, item: KnowledgeItem) -> None:
              self.store.append(item.raw)
              self.toolkit.logger.debug(f"Stored: {item.raw}")
      
          def read(self, query: Query) -> str:
              self.toolkit.logger.debug(f"Query: {query.raw}, store size: {len(self.store)}")
              if not self.store:
                  return "No information stored."
              result = "\n".join(self.store)
              return result[:1000]
      
      ```
      </current_program>
      
      <evaluation_score>0.200</evaluation_score>
      
      
      The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
      
      <failed_cases>
      <case id="1">
      <question>What is Alice's favorite color?</question>
      <expected>blue</expected>
      <model_generation>I don't know</model_generation>
      <score>0.0</score>
      <conversation>
        [user]: What is Alice's favorite color?
        [assistant]: I don't know
      </conversation>
      </case>
      
      </failed_cases>
      
      <task>
      1. Diagnose why these cases fail.
      2. Propose specific improvements to the Knowledge Base Program.
      3. Output your changes as a patch.
      </task>
    ''',
  })
# ---
# name: test_query_generation
  dict({
    'output': '{"raw":"capital of France"}',
    'prompt': '''
      Given the following question, generate a query to retrieve relevant memory.
      
      Question: What is the capital of France?
      
      The query must be a JSON object matching this schema:
      // Query: Raw text query to retrieve from the knowledge base.
      {
        "raw": "..."  // str, The query text to search for
      }
      
      Respond with the JSON only.
    ''',
  })
# ---
# name: test_reflection
  dict({
    'output': '''
      Diagnosis:
      - The current schema only stores raw text without any structured metadata, so retrieval can’t target specific knowledge (e.g., “capital of France”), and the read() simply dumps everything which makes it hard for the agent to find relevant facts.
      - The knowledge base lacks persistence in the provided toolkit database and doesn’t leverage query signals beyond returning the whole store, so queries return “I don’t know” even when the fact was written.
      - Instructions to the LLM are generic and unstructured, so the agent doesn’t know what fields to extract, what queries to build, or how to format answers.
      
      Changes:
      - Introduced structured KnowledgeItem fields (topic, detail, optional source) with descriptive metadata so the task LLM knows exactly what to capture.
      - Defined a Query schema with optional topic filter and keyword list plus clear instructions for constructing retrieval queries.
      - Rebuilt KnowledgeBase to persist items in the SQLite connection, filter results by topic/keywords, limit the output to the five most recent matches, and truncate responses to 1000 characters to satisfy runtime constraints; added debugging logs and explanatory comments for maintainability.
      - Updated all instruction constants to guide the task LLM (building items, queries, and answers) and added ALWAYS_ON_KNOWLEDGE to remind agents about using the knowledge base effectively and respecting the 1000-character limit. 
      
      *** Begin Patch
      *** Update File: program.py
      @@
      -from dataclasses import dataclass, field
      -
      -INSTRUCTION_KNOWLEDGE_ITEM = "Given the following text, create a KnowledgeItem to store this information in the knowledge base. Include all key information."
      -INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      -INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      -ALWAYS_ON_KNOWLEDGE = ""
      +from dataclasses import dataclass, field
      +from typing import List, Optional
      +import sqlite3
      +
      +INSTRUCTION_KNOWLEDGE_ITEM = (
      +    "Extract a concise topic, describe the key detail, and optionally note a source for the information. "
      +    "Populate the KnowledgeItem JSON with 'topic', 'detail', and 'source' fields."
      +)
      +INSTRUCTION_QUERY = (
      +    "Translate the user's question into the KnowledgeBase query schema: provide a 'topic' phrase to match "
      +    "and a 'keywords' list for any additional terms that should appear in the detail."
      +)
      +INSTRUCTION_RESPONSE = (
      +    "Use the retrieved knowledge to give a factual answer that is no more than 1,000 characters. "
      +    "Reference only the stored knowledge and avoid hallucinations."
      +)
      +ALWAYS_ON_KNOWLEDGE = (
      +    "You must always read the stored knowledge before answering and respect the 1000-character response limit. "
      +    "Do not invent facts that are not captured in the knowledge base."
      +)
      @@
      -@dataclass
      -class KnowledgeItem:
      -    """Raw text knowledge item to store in the knowledge base."""
      -    raw: str = field(metadata={"description": "The raw text to store"})
      +@dataclass
      +class KnowledgeItem:
      +    """Structured knowledge entries recorded in the base for later recall."""
      +    topic: str = field(metadata={"description": "High-level topic of the knowledge, e.g., 'capital of France'"})
      +    detail: str = field(metadata={"description": "Primary fact or scenario detail to remember"})
      +    source: Optional[str] = field(
      +        default=None,
      +        metadata={"description": "Optional reference or origin of the fact, such as a URL or title"},
      +    )
      @@
      -@dataclass
      -class Query:
      -    """Raw text query to retrieve from the knowledge base."""
      -    raw: str = field(metadata={"description": "The query text to search for"})
      +@dataclass
      +class Query:
      +    """Query parameters used to match stored knowledge."""
      +    topic: Optional[str] = field(
      +        default=None, metadata={"description": "Topic phrase to match against stored entries"}
      +    )
      +    keywords: List[str] = field(
      +        default_factory=list,
      +        metadata={"description": "Additional keywords that should appear in the detail text to narrow the search"},
      +    )
      @@
      -class KnowledgeBase:
      -    """Simple append-all / return-all knowledge base."""
      -
      -    def __init__(self, toolkit):
      -        self.toolkit = toolkit
      -        self.store: list[str] = []
      -
      -    def write(self, item: KnowledgeItem) -> None:
      -        self.store.append(item.raw)
      -        self.toolkit.logger.debug(f"Stored: {item.raw}")
      -
      -    def read(self, query: Query) -> str:
      -        self.toolkit.logger.debug(f"Query: {query.raw}, store size: {len(self.store)}")
      -        if not self.store:
      -            return "No information stored."
      -        result = "\n".join(self.store)
      -        return result[:1000]
      +class KnowledgeBase:
      +    """Stores and retrieves structured knowledge via the provided toolkit database."""
      +
      +    def __init__(self, toolkit):
      +        self.toolkit = toolkit
      +        self.conn: sqlite3.Connection = toolkit.db
      +        # Create persistent table for topic/detail/source tuples.
      +        self.conn.execute(
      +            """
      +            CREATE TABLE IF NOT EXISTS knowledge (
      +                id INTEGER PRIMARY KEY AUTOINCREMENT,
      +                topic TEXT NOT NULL,
      +                detail TEXT NOT NULL,
      +                source TEXT
      +            )
      +            """
      +        )
      +        self.conn.commit()
      +        self.toolkit.logger.debug("KnowledgeBase initialized with SQLite table.")
      +
      +    def write(self, item: KnowledgeItem) -> None:
      +        """Persist the structured item so read() can retrieve it later."""
      +        self.conn.execute(
      +            "INSERT INTO knowledge (topic, detail, source) VALUES (?, ?, ?)",
      +            (item.topic, item.detail, item.source),
      +        )
      +        self.conn.commit()
      +        self.toolkit.logger.debug(f"Stored knowledge: topic={item.topic}, detail={item.detail}")
      +
      +    def read(self, query: Query) -> str:
      +        """Fetch recent knowledge matching the query filters without exceeding the 1000-character limit."""
      +        conditions = []
      +        params: List[str] = []
      +
      +        if query.topic:
      +            conditions.append("topic LIKE ?")
      +            params.append(f"%{query.topic}%")
      +
      +        for keyword in query.keywords:
      +            conditions.append("detail LIKE ?")
      +            params.append(f"%{keyword}%")
      +
      +        sql = "SELECT topic, detail, source FROM knowledge"
      +        if conditions:
      +            sql += " WHERE " + " AND ".join(conditions)
      +        sql += " ORDER BY id DESC LIMIT 5"
      +
      +        self.toolkit.logger.debug(f"Executing SQL: {sql} with params {params}")
      +        cursor = self.conn.execute(sql, params)
      +        rows = cursor.fetchall()
      +
      +        if not rows:
      +            self.toolkit.logger.debug("No matching knowledge found.")
      +            return "No matching information stored."
      +
      +        fragments = []
      +        for topic, detail, source in rows:
      +            fragment = f"Topic: {topic}\nDetail: {detail}"
      +            if source:
      +                fragment += f"\nSource: {source}"
      +            fragments.append(fragment)
      +
      +        consolidated = "\n\n".join(fragments)
      +        truncated = consolidated if len(consolidated) <= 1000 else consolidated[:997] + "..."
      +        self.toolkit.logger.debug(f"Returning {len(truncated)} characters of knowledge.")
      +        return truncated
      *** End Patch
    ''',
    'prompt': '''
      You are an expert Python programmer specializing in knowledge base system design.
      
      Your task: Given a Knowledge Base Program (Python code defining KnowledgeItem, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
      
      <interface_spec>
      You are designing a Knowledge Base Program that implements three classes:
      
      1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
         - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
         - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
      
      2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - Same JSON-compatible type restriction and field description support as KnowledgeItem
      
      3. **KnowledgeBase** (class): The core knowledge base system.
         - `__init__(self, toolkit)`: Receives a Toolkit with:
           - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
           - `toolkit.chroma`: chromadb ephemeral client
           - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
           - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
         - `write(self, item: KnowledgeItem) -> None`: Store information
         - `read(self, query: Query) -> str`: Retrieve relevant information as a string
      
      Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
      
      ## Runtime Constraints
      
      These limits are enforced during evaluation. Violating them results in score = 0.
      
      - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
      - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
      - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
      
      ## Instruction Constants (required)
      
      Four module-level string constants provide the natural-language instructions used in task agent prompts:
      
      - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
      - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
      
      INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
      
      </interface_spec>
      
      <rules>
      1. Output your diagnosis first, then your changes as a patch using the format below.
      2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
      3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
      4. `read()` must return at most 1000 characters — do not return all stored text.
      5. Keep it simple. Make minimal, targeted fixes.
      6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
      7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
      </rules>
      
      <patch_format>
      Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
      
      Format:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ <optional context hint>
       context line (1-2 lines before change)
      -removed line
      +added line
       context line (1-2 lines after change)
      *** End Patch
      ```
      
      Rules:
      - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
      - Include 1-2 context lines before and after each change for anchoring.
      - Multiple hunks are allowed within one `*** Update File` block.
      
      Example — replacing a return value:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ return statement
       def read(self, query: Query) -> str:
      -    return "\n".join(self.store)
      +    return "\n".join(self.store[-5:])
      *** End Patch
      ```
      </patch_format>
      
      <current_program iteration="1">
      ```python
      from dataclasses import dataclass, field
      
      INSTRUCTION_KNOWLEDGE_ITEM = "Given the following text, create a KnowledgeItem to store this information in the knowledge base. Include all key information."
      INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class KnowledgeItem:
          """Raw text knowledge item to store in the knowledge base."""
          raw: str = field(metadata={"description": "The raw text to store"})
      
      
      @dataclass
      class Query:
          """Raw text query to retrieve from the knowledge base."""
          raw: str = field(metadata={"description": "The query text to search for"})
      
      
      class KnowledgeBase:
          """Simple append-all / return-all knowledge base."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store: list[str] = []
      
          def write(self, item: KnowledgeItem) -> None:
              self.store.append(item.raw)
              self.toolkit.logger.debug(f"Stored: {item.raw}")
      
          def read(self, query: Query) -> str:
              self.toolkit.logger.debug(f"Query: {query.raw}, store size: {len(self.store)}")
              if not self.store:
                  return "No information stored."
              result = "\n".join(self.store)
              return result[:1000]
      
      ```
      </current_program>
      
      <evaluation_score>0.300</evaluation_score>
      
      
      The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
      
      <failed_cases>
      <case id="1">
      <question>What is the capital of France?</question>
      <expected>Paris</expected>
      <model_generation>I don't know</model_generation>
      <score>0.0</score>
      <conversation>
        [user]: What is the capital of France?
        [assistant]: I don't know
      </conversation>
      </case>
      
      </failed_cases>
      
      <task>
      1. Diagnose why these cases fail.
      2. Propose specific improvements to the Knowledge Base Program.
      3. Output your changes as a patch.
      </task>
    ''',
  })
# ---
# name: test_reflection_recovery
  dict({
    'reflected_code': '''
      import re
      from dataclasses import dataclass, field
      
      INSTRUCTION_KNOWLEDGE_ITEM = (
          "Extract concrete factual statements from the provided text. "
          "Preserve exact values (codes, IDs, names, numbers) verbatim."
      )
      INSTRUCTION_QUERY = (
          "Convert the user question into a concise retrieval query that keeps key entities and requested facts."
      )
      INSTRUCTION_RESPONSE = (
          "Answer using the retrieved memory. Be concise and include exact values when available."
      )
      ALWAYS_ON_KNOWLEDGE = (
          "Prefer exact string matches for sensitive values like access codes, identifiers, and credentials."
      )
      
      
      @dataclass
      class KnowledgeItem:
          """Single memory snippet stored as plain text for deterministic retrieval."""
          raw: str = field(metadata={"description": "Raw fact text to store exactly as written."})
      
      
      @dataclass
      class Query:
          """Plain-text retrieval query."""
          raw: str = field(
              metadata={"description": "User information need as short text with key entities/keywords."}
          )
      
      
      class KnowledgeBase:
          """Simple lexical memory with lightweight ranking and strict output truncation."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              # Keep in-process memory for speed and reliability (no LLM calls, no heavy indexing).
              self.store: list[str] = []
              # Small stopword list improves keyword overlap scoring by reducing noise terms.
              self._stopwords = {
                  "the", "is", "a", "an", "of", "to", "in", "on", "for", "and", "or",
                  "what", "which", "who", "where", "when", "why", "how", "please"
              }
      
          def write(self, item: KnowledgeItem) -> None:
              text = (item.raw or "").strip()
              if not text:
                  # Ignore empty writes to avoid polluting retrieval results.
                  self.toolkit.logger.debug("Ignored empty knowledge item.")
                  return
              self.store.append(text)
              self.toolkit.logger.debug(f"Stored item #{len(self.store)}: {text[:120]}")
      
          def _tokens(self, text: str) -> set[str]:
              # Regex tokenization is deterministic and fast; keeps alphanumerics like DELTA-7742 as two useful parts.
              toks = re.findall(r"[a-z0-9]+", text.lower())
              return {t for t in toks if t and t not in self._stopwords}
      
          def read(self, query: Query) -> str:
              q = (query.raw or "").strip()
              self.toolkit.logger.debug(f"Read query: {q[:120]} | store size: {len(self.store)}")
              if not self.store:
                  return "No information stored."
      
              q_tokens = self._tokens(q)
              scored: list[tuple[int, str]] = []
              q_lower = q.lower()
      
              for text in self.store:
                  t_tokens = self._tokens(text)
                  # Overlap score gives robust retrieval without expensive embedding calls.
                  overlap = len(q_tokens & t_tokens)
                  # Phrase boost helps when the knowledge sentence directly mirrors the question subject.
                  phrase_boost = 2 if q_lower and any(tok in text.lower() for tok in q_tokens) else 0
                  score = overlap + phrase_boost
                  if score > 0:
                      scored.append((score, text))
      
              if not scored:
                  # Fallback: return the most recent memory snippet when no lexical match exists.
                  result = self.store[-1]
                  return result[:1000]
      
              # Highest score first; keep only a few snippets to stay focused and within output budget.
              scored.sort(key=lambda x: x[0], reverse=True)
              top_texts = [text for _, text in scored[:3]]
              result = "\n".join(top_texts)
              # Hard cap required by interface constraints.
              return result[:1000]
  
    ''',
    'round1_score': 0.0,
    'round2_output': 'DELTA-7742',
    'round2_score': 1.0,
  })
# ---
# name: test_retrieved_memory_answer
  dict({
    'step1_output': '{"raw":"capital of France"}',
    'step1_prompt': '''
      Given the following question, generate a query to retrieve relevant memory.
      
      Question: What is the capital of France?
      
      The query must be a JSON object matching this schema:
      // Query: Raw text query to retrieve from the knowledge base.
      {
        "raw": "..."  // str, The query text to search for
      }
      
      Respond with the JSON only.
    ''',
    'step2_output': 'The capital of France is Paris.',
    'step2_prompt': '''
      <retrieved_memory>
      The capital of France is Paris.
      </retrieved_memory>
      
      Based on the above memory and the original question, provide your answer.
    ''',
  })
# ---
# name: test_runtime_violation_fix_oversized_read
  dict({
    'fixed_code': '''
      from dataclasses import dataclass, field
      
      INSTRUCTION_KNOWLEDGE_ITEM = "Extract task-relevant knowledge and record it using the KnowledgeItem schema; respond with valid JSON that matches the schema exactly."
      INSTRUCTION_QUERY = "Formulate a concise Query JSON object describing the information needed from the knowledge base."
      INSTRUCTION_RESPONSE = "When answering, be helpful, concise, and cite relevant stored knowledge briefly."
      ALWAYS_ON_KNOWLEDGE = "Always reference stored knowledge items accurately and avoid inventing details."
      
      
      @dataclass
      class KnowledgeItem:
          raw: str = field(metadata={"description": "Original text that represents a piece of knowledge to store."})
      
      
      @dataclass
      class Query:
          raw: str = field(metadata={"description": "Text describing what information to retrieve from the knowledge base."})
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store: list[str] = []
      
          def write(self, item: KnowledgeItem) -> None:
              self.store.append(item.raw)
      
          def read(self, query: Query) -> str:
              combined = "\n".join(self.store)
              result = combined[-1000:]
              self.toolkit.logger.debug(f"Returning {len(result)} chars for query {query.raw!r}.")
              return result
  
    ''',
    'runtime_violation': 'kb.read() returned 5000 chars (limit: 1000)',
  })
# ---
# name: test_toolkit_llm_completion
  dict({
    'output': '5',
    'prompt': 'What is 2 + 3? Answer with just the number.',
  })
# ---
